testing/Travis/testcases/prototype/shouldSucceed/BroadTableTest.adl
CONTEXT BroadTableTest IN ENGLISH

CLASSIFY Asml ISA A
CLASSIFY Bsml ISA B

RELATION r[B*Asml][UNI,INJ,SUR]

ENDCONTEXT