testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Issue726.adl
CONTEXT Issue726
   RELATION r [A*B]
   REPRESENT B TYPE INTEGER
   RULE r;"Aap"
ENDCONTEXT